# blog-api-rust

./: Cargo.toml  Rocket.toml
src/: main.rs  schema.rs
