[package]
name = "blog-api-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
serde = { version = "1.0.126", features = ["derive"] }
dotenv = "0.15.0"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json"]